# app-md-sim

./: README.md  pyproject.toml
examples/: param_1.json  param_2.json
src/app_md_sim/: cli.py
src/app_md_sim/models/: inputs.py
src/app_md_sim/services/: gen_models_packmol.py
